[package]
name = "rustdatabasen"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
rand = "0.8"
argon2 = "0.4"
eframe = "0.22"
egui_extras = "0.22"
image = "0.24"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
kamadak-exif = "0.5"
base64 = "0.22.1"
rfd = "0.12"
libc = "0.2"
rayon = "1.7"

[[bin]]
name = "AI_databasen"
path = "AI_databasen.rs"

[profile.dev]
opt-level = 0

